--- a/package.json
+++ b/package.json
@@ -11,5 +11,10 @@
     "next": "^11.0.0",
     "react": "17.0.2",
     "react-dom": "17.0.2"
+  },
+  "devDependencies": {
+    "@types/node": "^16.9.0",
+    "@types/react": "^17.0.20",
+    "typescript": "^4.4.2"
   }
 }
