--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "start": "next start"
   },
   "dependencies": {
+    "gray-matter": "^4.0.3",
+    "marked": "^3.0.3",
     "next": "^11.0.0",
     "react": "17.0.2",
     "react-dom": "17.0.2"
@@ -16,5 +18,8 @@
     "@types/node": "^16.9.0",
     "@types/react": "^17.0.20",
     "typescript": "^4.4.2"
+  },
+  "browser": {
+    "fs": false
   }
 }
