--- a/package.json
+++ b/package.json
@@ -8,15 +8,18 @@
     "start": "next start"
   },
   "dependencies": {
+    "@types/prismjs": "^1.16.6",
     "gray-matter": "^4.0.3",
     "marked": "^3.0.3",
     "next": "^11.0.0",
+    "prismjs": "^1.24.1",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
     "@types/node": "^16.9.0",
     "@types/react": "^17.0.20",
+    "babel-plugin-prismjs": "^2.1.0",
     "typescript": "^4.4.2"
   },
   "browser": {
