--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,7 +22,7 @@
     "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx"
-, "pages/post/[slug].tsx"  ],
+, "pages/post/[slug]/index.tsx"  ],
   "exclude": [
     "node_modules"
   ]
