--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/node": "^16.9.0",
     "@types/react": "^17.0.20",
     "babel-plugin-prismjs": "^2.1.0",
+    "react-share": "^4.4.0",
     "typescript": "^4.4.2"
   },
   "browser": {
