--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/react": "^17.0.20",
     "babel-plugin-prismjs": "^2.1.0",
     "react-share": "^4.4.0",
+    "sass": "^1.42.1",
     "typescript": "^4.4.2"
   },
   "browser": {
