--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "@types/gtag.js": "^0.0.10",
     "@types/node": "^16.9.0",
     "@types/react": "^17.0.20",
     "babel-plugin-prismjs": "^2.1.0",
