--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "build": "next build",
     "deploy": "next build && next export && next-sitemap --config sitemap.config.js && firebase deploy --only hosting",
     "start": "next start"
   },
