--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "next": "^11.0.0",
     "prismjs": "^1.24.1",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "recoil": "^0.7.0"
   },
   "devDependencies": {
     "@types/gtag.js": "^0.0.10",
