--- a/package.json
+++ b/package.json
@@ -4,18 +4,24 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "next build && next export",
     "deploy": "next build && next export && next-sitemap --config sitemap.config.js && firebase deploy --only hosting",
     "start": "next start"
   },
   "dependencies": {
+    "@chakra-ui/icons": "^2.0.8",
+    "@chakra-ui/react": "^2.2.8",
+    "@emotion/react": "^11.10.0",
+    "@emotion/styled": "^11.10.0",
     "@types/prismjs": "^1.16.6",
+    "framer-motion": "^6.5.1",
+    "github-markdown-css": "^5.1.0",
     "gray-matter": "^4.0.3",
     "marked": "^3.0.3",
-    "next": "^11.0.0",
+    "next": "^12.2.5",
     "prismjs": "^1.24.1",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "recoil": "^0.7.0"
   },
   "devDependencies": {
