--- a/package.json
+++ b/package.json
@@ -9,28 +9,29 @@
     "start": "next start"
   },
   "dependencies": {
-    "@chakra-ui/icons": "^2.0.8",
-    "@chakra-ui/react": "^2.2.8",
-    "@emotion/react": "^11.10.0",
-    "@emotion/styled": "^11.10.0",
-    "@types/prismjs": "^1.16.6",
+    "@chakra-ui/icons": "^2.0.13",
+    "@chakra-ui/react": "^2.4.2",
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
     "framer-motion": "^6.5.1",
     "github-markdown-css": "^5.1.0",
     "gray-matter": "^4.0.3",
     "marked": "^3.0.3",
     "next": "^13.0.6",
+    "next-share": "^0.19.0",
     "prismjs": "^1.24.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "recoil": "^0.7.0"
+    "recoil": "^0.7.0",
+    "usehooks-ts": "^2.9.1"
   },
   "devDependencies": {
     "@types/gtag.js": "^0.0.10",
     "@types/node": "^16.9.0",
+    "@types/prismjs": "^1.16.6",
     "@types/react": "^17.0.20",
     "babel-plugin-prismjs": "^2.1.0",
     "next-sitemap": "^1.6.203",
-    "react-share": "^4.4.0",
     "sass": "^1.42.1",
     "typescript": "^4.4.2"
   },
