--- a/package.json
+++ b/package.json
@@ -31,6 +31,9 @@
     "@types/prismjs": "^1.16.6",
     "@types/react": "^17.0.20",
     "babel-plugin-prismjs": "^2.1.0",
+    "eslint": "^8.31.0",
+    "eslint-config-next": "^13.1.2",
+    "eslint-plugin-react": "^7.32.0",
     "next-sitemap": "^1.6.203",
     "sass": "^1.42.1",
     "typescript": "^4.4.2"
