--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev",
     "build": "next build && next export",
     "deploy": "next build && next export && next-sitemap --config sitemap.config.js && firebase deploy --only hosting",
-    "start": "next start"
+    "start": "next start",
+    "prepare": "husky install",
+    "lint-staged": "lint-staged"
   },
   "dependencies": {
     "@chakra-ui/icons": "^2.0.13",
@@ -34,6 +36,8 @@
     "eslint": "^8.31.0",
     "eslint-config-next": "^13.1.2",
     "eslint-plugin-react": "^7.32.0",
+    "husky": "^8.0.3",
+    "lint-staged": "^13.1.0",
     "next-sitemap": "^1.6.203",
     "sass": "^1.42.1",
     "typescript": "^4.4.2"
