--- a/package.json
+++ b/package.json
@@ -35,10 +35,12 @@
     "babel-plugin-prismjs": "^2.1.0",
     "eslint": "^8.31.0",
     "eslint-config-next": "^13.1.2",
+    "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-react": "^7.32.0",
     "husky": "^8.0.3",
     "lint-staged": "^13.1.0",
     "next-sitemap": "^1.6.203",
+    "prettier": "2.8.3",
     "sass": "^1.42.1",
     "typescript": "^4.4.2"
   },
