--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "lint": "next lint",
     "build": "next build && next export",
     "deploy": "next build && next export && next-sitemap --config sitemap.config.js && firebase deploy --only hosting",
     "start": "next start",
@@ -24,7 +25,9 @@
     "prismjs": "^1.24.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.7.1",
     "recoil": "^0.7.0",
+    "tone": "^14.7.77",
     "usehooks-ts": "^2.9.1"
   },
   "devDependencies": {
